language/move-lang/tests/move_check/translated_ir_tests/move/commands/abort_negative_stack_size.move
// check: NEGATIVE_STACK_SIZE_WITHIN_BLOCK
script {

fun main() {
    abort
}
}
